Fix chart spacing

--- a/backend/components/app/index.css
+++ b/backend/components/app/index.css
@@ -5,7 +5,7 @@
 }
 
 .App-container {
-  padding: var(--viewport-padding);
+  padding: 0 var(--viewport-padding);
 }
 
 @media (--lg-viewport) {
